--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <span>LIBRARY WEB</span>
+    </header>
+    <main>
+
+        <div class="buttons-container">
+            <button onclick="orderByTitle()">Distribuisci Per Titolo</button>
+            <button onclick="orderByYop()">Distribuisci Per Anno Pubblicazione</button>
+            <button onclick="orderByCategory()">Distribuisci Per Categoria</button>
+        </div>
+
+        <div id="books-container"></div>
+    </main>
+    <footer>
+        <span>©copyright library web s. r. l. 2025</span>
+    </footer>
 </body>
 <script type="module" src="./src/app.js"></script>
 </html>
